# prom-convert

./: .gitignore  Cargo.toml  README.md
driver/: Cargo.toml
driver/src/: fetch.rs  http.rs  index.html  lib.rs  parse.rs
fetch/: Cargo.toml
fetch/src/: lib.rs
parse/: Cargo.toml
parse/src/: lib.rs
prom2parquet/: Cargo.toml
prom2parquet/src/: export.rs  main.rs
prom2sqlite/: .gitignore  Cargo.toml  README.md
prom2sqlite/src/: exposition.rs  main.rs  prelude.sql  schema.sql  table.rs
prom2sqlite/ui/: package.json
prom2sqlite/ui/src/: index.html  index.ts
src/: main.rs  prometheus.pest
testdata/: node_exporter-v1.7.0.txt
ui/: .eslintrc.json  package-lock.json
