[package]
name = "prom2sqlite"
description = "Collects data from Prometheus clients and stores it locally in SQLite."
authors = ["Tony Rippy"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"

[build-dependencies]

[dev-dependencies]
