[package]
name = "driver"
description = "Collect & process data from Prometheus clients."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6"
chrono = "0.4.37"
http-body-util = "0.1"
hyper = { version = "1.2", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
log = "0.4"
pest = "2.7.9"
pest_derive = "2.7.8"
prometheus = { version = "0.13.3", features = ["process"] }
tokio = { version = "1", features = ["macros", "net", "rt", "signal", "time"] }

[build-dependencies]

[dev-dependencies]
