[package]
name = "fetch"
description = "Collect & parse data from Prometheus clients."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5"
chrono = "0.4.34"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
log = "0.4"
prometheus = "0.13.3"
tokio = { version = "1", features = ["net"] }

[build-dependencies]

[dev-dependencies]
