[package]
name = "prom2parquet"
description = "Collects data from Prometheus clients and stores it locally to Parquet files."
authors = ["Tony Rippy"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "50.0.0"
clap = { version = "4", features = ["derive"] }
driver = { path = "../driver" }
env_logger = "0.11.3"
log = "0.4"
parquet = "50.0.0"
