[package]
name = "prom2sqlite"
description = "Collects data from Prometheus clients and stores it locally in SQLite."
authors = ["Tony Rippy"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4", features = ["derive"] }
driver = { path = "../driver" }
env_logger = "0.11.3"
log = "0.4"
rusqlite = { version = "0.31.0", features = ["bundled", "load_extension"] }
